<resources>
    <string name="app_name">Nairobi County NCD-QM</string>
    <string name="action_settings">Settings</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="title_activity_home">Home</string>

    <string name="logo">Company Logo</string>
    <string name="search">Search …</string>

    <string name="location_prompt">Choose a location</string>

    <string-array name="location_arrays">
        <item> </item>
        <item>Pharmacy</item>
        <item>Laboratory</item>
        <item>Isolation Ward</item>
        <item>Registration Desk</item>
        <item>Inpatient Ward</item>
        <item>Outpatient Ward</item>
        <item>Other/Field</item>
    </string-array>

    <string-array name="occupation_arrays">
        <item> </item>
        <item>Unknown</item>
        <item>Unemployed</item>
        <item>Farmer</item>
        <item>Trader</item>
        <item>Employee</item>
        <item>Retired</item>
        <item>Student</item>
        <item>Driver</item>
    </string-array>

    <string-array name="education_arrays">
        <item> </item>
        <item>Secondary</item>
        <item>Laboratory</item>
        <item>Isolation Ward</item>
        <item>Registration Desk</item>
        <item>Inpatient Ward</item>
        <item>Outpatient Ward</item>
        <item>Other/Field</item>
    </string-array>

    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>

    <string name="aihd">African Institute for Health and Development</string>
    <string name="intro_reports">Working with commuinities for better lives through evidence-based programming.</string>
    <string name="about_us">
        AIHD is a non‐profit, non‐governmental organization (NGO) established in June 2004 in Nairobi,
        Kenya by a group of accomplished African researchers and academicians.
        The Institute’s main focus is on implementing evidence-based programming, conducting research,
        training and advocacy on health and development issues that are contextually relevant to Kenya and the African continent.
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nairobi_city_council">Nairobi City County</string>
    <string name="pending">Pending</string>
    <string name="uploaded">Uploaded</string>
    <string name="deceased">Is the patient deceased?</string>
    <string name="malteser_international">Malteser International</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="resources">Resources</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="communicate">Communicate</string>
    <string name="dm_htn_follow_up">DM HTN Follow Up</string>
    <string name="patients">Patients</string>
    <string name="add_patients">Add Patients</string>
    <string name="home">Home</string>
    <string name="icon">Icon</string>
    <string name="drug_history">Drug History</string>
    <string name="vitals">Vitals</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="lost_to_follow_up">Lost to Follow Up</string>
    <string name="drug_summary">Drug Summary</string>
    <string name="vitals_summary">Vitals Summary</string>
    <string name="drug">Drug</string>
    <string name="dose_frequency"><![CDATA[Dose(mg) & Frequency]]></string>

    <string name="check_to_pass">I accept the terms &amp; conditions.</string>
    <string name="error_message">Please accept the terms &amp; conditions to proceed.</string>

    <string name="privacy_policy_link"></string>
    <string name="agreement">
        \n \n \n \n<b>AGREEMENT</b>\nPlease review the privacy policy.

        \n\nI have read and understood the policy below and agree to keep strictly confidential
        all confidential information received from the records of the Department of Health.
        I understand fully the consequences if confidential information is disclosed without proper authorization.
        I discussed, and will continue to discuss, with County Health Management Team personnel any questions
        about what is confidential or to whom confidential information may be revealed.
</string>
    <string name="register">Register</string>
    <string name="title_activity_attachment">AttachmentActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>