<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <!--<item
            android:id="@+id/nav_add_patients"
            android:icon="@drawable/ic_person_add"
            android:title="@string/add_patients" />-->
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_people"
            android:title="@string/patients" />
        <item
            android:id="@+id/nav_dm_follow_up"
            android:icon="@drawable/ic_description"
            android:title="@string/dm_htn_follow_up" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_resources"
                android:icon="@drawable/ic_menu_resources"
                android:title="@string/resources" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <!--
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="Settings" />
                -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>
