<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/diabetes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle"
                android:tint="@color/blue" />

            <customfonts.TextView_Roboto_Regular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diabetes"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hypertension"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle"
                android:tint="@color/orange" />

            <customfonts.TextView_Roboto_Regular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hypertension"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_event_note" />

            <customfonts.TextView_Roboto_Regular
                android:id="@+id/appointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/light_green"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lostFollowUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_event_note" />

            <customfonts.TextView_Roboto_Regular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/lost_to_follow_up"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/showVitals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderfull"
            android:drawableEnd="@drawable/ic_expand_more"
            android:drawableRight="@drawable/ic_expand_more"
            android:padding="10dp"
            android:text="@string/vitals" />

        <Button
            android:id="@+id/hideVitals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderfull"
            android:drawableEnd="@drawable/ic_expand_less"
            android:drawableRight="@drawable/ic_expand_less"
            android:padding="10dp"
            android:text="@string/vitals"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/vitals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <customfonts.TextView_Roboto_Bold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/vitals_summary"
                android:textSize="15sp" />

            <customfonts.TextView_Roboto_Regular
                android:id="@+id/textViewVitals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/showDrugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderfull"
            android:drawableEnd="@drawable/ic_expand_more"
            android:drawableRight="@drawable/ic_expand_more"
            android:padding="10dp"
            android:text="@string/drug_history" />

        <Button
            android:id="@+id/hideDrugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderfull"
            android:drawableEnd="@drawable/ic_expand_less"
            android:drawableRight="@drawable/ic_expand_less"
            android:padding="10dp"
            android:text="@string/drug_history"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/drugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <customfonts.TextView_Roboto_Bold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:background="@color/background_inner"
                    android:padding="10dp"
                    android:text="@string/drug"
                    android:textAllCaps="false" />

                <customfonts.TextView_Roboto_Bold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:background="@color/background_inner"
                    android:padding="10dp"
                    android:text="@string/dose_frequency"
                    android:textAllCaps="false" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <customfonts.TextView_Roboto_Regular
                        android:id="@+id/treatment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25" />

                    <customfonts.TextView_Roboto_Regular
                        android:id="@+id/drug"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <customfonts.TextView_Roboto_Regular
                        android:id="@+id/frequency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>